--- a/index.html
+++ b/index.html
@@ -1,12 +1,44 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="es">
 <head>
-	<title>Title of the document</title>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="style.css">
+	<link href="https://www.dafontfree.net/embed/ZnV0dXJhLW1kLWJ0LW1lZGl1bSZkYXRhLzI1L2YvMTI1OTM3L0Z1dHVyYU1lZGl1bUJULnR0Zg"
+		rel="stylesheet" type="text/css" />
+	<title>Producimos Futuro</title>
 </head>
-
 <body>
-	<h1>This is a heading</h1>
-	<p>This is a paragraph.</p>
-</body>
+	<main>
+		<div id="Banner">
+			<div id="BannerText">
+				<h1>Producimos Futuro</h1>
+			</div>
+		</div>
 
+		<div id="image1">
+			<img src="https://i.postimg.cc/Gm6wbsfF/Whats-App-Image-2022-06-21-at-9-03-28-PM-1.jpg" alt="">
+		</div>
+
+		<div id="image2">
+			<img src="https://i.postimg.cc/7LNVmFS5/Afiche2.jpg" alt="">
+		</div>
+
+		<div id="Text">
+			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus minima doloribus voluptatum fugiat dolorem optio! Possimus ipsum illo, nostrum vel vitae quis laudantium, adipisci dicta voluptatum quaerat, iure nemo aperiam!</p>
+		</div>
+
+	</main>	
+	
+	<footer>
+		<h4>Fernanda Bertolio...</h4>
+		<p><strong>MATERIA</strong> Facultad de Arquitectura, Diseño y Urbanismo</p>
+	</footer>
+
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"
+		integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous">
+	</script>
+	<script src="main.js"></script>
+</body>
 </html>
