fixed imgs added js

--- a/index.html
+++ b/index.html
@@ -18,22 +18,25 @@
 		</div>
 
 		<div id="image1">
-			<img src="https://i.postimg.cc/Gm6wbsfF/Whats-App-Image-2022-06-21-at-9-03-28-PM-1.jpg" alt="">
+			<img src="https://i.postimg.cc/ZRYkT93j/afiche1-2.jpg" alt="">
 		</div>
 
 		<div id="image2">
-			<img src="https://i.postimg.cc/7LNVmFS5/Afiche2.jpg" alt="">
+			<img src="https://i.postimg.cc/pdZ7127j/afiche2-2.jpg" alt="">
 		</div>
 
 		<div id="Text">
 			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus minima doloribus voluptatum fugiat dolorem optio! Possimus ipsum illo, nostrum vel vitae quis laudantium, adipisci dicta voluptatum quaerat, iure nemo aperiam!</p>
 		</div>
+		
+		<button id=botonCharlas class=btn type="button" onclick="myFunction()">Charlas</button>
+
+		<div id="Charlas" style="display:none">
+			<img src="https://i.postimg.cc/pdZ7127j/afiche2-2.jpg" alt="">
+		</div>
 
 	</main>	
 
-	<script src="https://code.jquery.com/jquery-3.6.0.min.js"
-		integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous">
-	</script>
 	<script src="main.js"></script>
 </body>
 </html>
