--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 		</div>
 
 		<div id="image1">
-			<img src="https://postimg.cc/679v9XhZ][img]https://i.postimg.cc/679v9XhZ/FINAL-FINAL.png" alt="">
+			<img src="https://i.postimg.cc/679v9XhZ/FINAL-FINAL.png" alt="">
 		</div>
 
 		<div id="image2">
-			<img src="https://postimg.cc/sMPWdX5y][img]https://i.postimg.cc/sMPWdX5y/FINAL-FINAL-1.png" alt="">
+			<img src="https://i.postimg.cc/sMPWdX5y/FINAL-FINAL-1.png" alt="">
 		</div>
 
 		<div id="Text">
