--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 			</div>
 		</div>
 
-		<div id="image1">
+		<div id="FINAL-FINAL">
 			<img src="https://i.postimg.cc/679v9XhZ/FINAL-FINAL.png" alt="">
 		</div>
 
-		<div id="image2">
+		<div id="FINAL-FINAL-1">
 			<img src="https://i.postimg.cc/sMPWdX5y/FINAL-FINAL-1.png" alt="">
 		</div>
 
