--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 		</div>
 
 		<div id="FINAL-FINAL">
-			<img src="https://i.postimg.cc/679v9XhZ/FINAL-FINAL.png" alt="">
+			<img src="https://i.postimg.cc/679v9XhZ/FINAL-FINAL.jpg" alt="">
 		</div>
 
 		<div id="FINAL-FINAL-1">
-			<img src="https://i.postimg.cc/sMPWdX5y/FINAL-FINAL-1.png" alt="">
+			<img src="https://i.postimg.cc/sMPWdX5y/FINAL-FINAL-1.jpg" alt="">
 		</div>
 
 		<div id="Text">
