--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 			</div>
 		</div>
 
-		<div id="FINAL-FINAL">
+		<div id="FINAL-FINAL-4x-100">
 			<img src="https://i.postimg.cc/679v9XhZ/FINAL-FINAL.jpg" alt="">
 		</div>
 
-		<div id="FINAL-FINAL-1">
+		<div id=FINAL-FINAL-1-4x-100">
 			<img src="https://i.postimg.cc/sMPWdX5y/FINAL-FINAL-1.jpg" alt="">
 		</div>
 
