--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 			</div>
 		</div>
 
-		<div id="FINAL-FINAL-4x-100">
-			<img src="https://i.postimg.cc/679v9XhZ/FINAL-FINAL.jpg" alt="">
+		<div id="FINAL-FINAL-2x-8">
+			<img src="https://i.postimg.cc/hhpDFXD8/FINAL-FINAL-2x-8.png" alt="">
 		</div>
 
-		<div id=FINAL-FINAL-1-4x-100">
-			<img src="https://i.postimg.cc/sMPWdX5y/FINAL-FINAL-1.jpg" alt="">
+		<div id="FINAL-FINAL-1-2x-8">
+			<img src="https://i.postimg.cc/F19rny4s/FINAL-FINAL-1-2x-8.png" alt="">
 		</div>
 
 		<div id="Text">
