--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 			</div>
 		</div>
 
-		<div id="FINAL-FINAL-2x-8">
-			<img src="https://i.postimg.cc/hhpDFXD8/FINAL-FINAL-2x-8.png" alt="">
+		<div id="final-agua.jpg">
+			<img src="https://i.postimg.cc/nLjYR7TJ/final-agua.jpg" alt="">
 		</div>
 
-		<div id="FINAL-FINAL-1-2x-8">
-			<img src="https://i.postimg.cc/F19rny4s/FINAL-FINAL-1-2x-8.png" alt="">
+		<div id="final-remedio.jpg">
+			<img src="https://i.postimg.cc/GmSxxzFK/final-remedio.jpg" alt="">
 		</div>
 
 		<div id="Text">
