--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 			</div>
 		</div>
 
-		<div id="final-agua.jpg">
+		<div id="final-agua">
 			<img src="https://i.postimg.cc/nLjYR7TJ/final-agua.jpg" alt="">
 		</div>
 
-		<div id="final-remedio.jpg">
+		<div id="final-remedio">
 			<img src="https://i.postimg.cc/GmSxxzFK/final-remedio.jpg" alt="">
 		</div>
 
