--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
 			<p>¡Los esperamos!</p>
 		</div>
 		
+		<div id="INVITACI-N">
+			<img src="https://i.postimg.cc/8CY9jC8w/INVITACI-N.png" alt="">
+		</div>
+		
 		<div id=botonCharlas>
 			<button class=btn type="button" onclick="myFunction()">Acerca de nuestras charlas</button>
 		</div>
