--- a/index.html
+++ b/index.html
@@ -31,20 +31,16 @@
 			dimensionar el conflicto, presentamos una caja de remedios, mostrando con valores y síntomas todo lo que causa el estar
 			expuesto a los químicos que se manejan en la planta; y también, una línea de "agua tóxica" que es justamente como se
 			encuentra el Río Negro actualmente.</p>
+			
+			
 			<p>Según informes de "La Diaria", 34% de trabajadores de las plantas, y zonas cercanas, dijeron haber padecido dolor de
 			cabeza agudos, ardor, picazón y alergias en la piel.</p>
-			<p>También, el Decreto N° 253/979, artículo 11 de la Normativa y Avisos Legales de Uruguay, Aprobación de la normativa para
-			prevenir la contaminación ambiental a través del control de las aguas, establece los valores que poseen los ríos del
-			país y que valor pueden tener como máximo según el elemento que sea. Estos van desde el nitrógeno hasta el amoníaco.
-			Varios estudios acerca de los valores del agua en el Río Negro muestran qué tanto logran contaminar los desechos de la
-			Planta; mientras que la normativa uruguaya para los ecosistemas acuáticos fija un valor máximo de fósforo de 25
-			microgramos por litro, el río Negro tiene una concentración de entre 80 y 90 microgramos por litro, es decir, entre 4 y
-			5 veces más que lo que fija la normativa. La planta de UPM vierte 75 kg de fósforo por día al río.
-			Siendo esta, una problemática que nos afecta directa o indirectamente a todos los Uruguayos, accionamos y levantamos la
-			voz mostrando estos valores y estas consecuencias en las calles.</p>
-			<p>Si estás interesado en los conflictos ambientales causados por las plantas de UPM, te invitamos al lanzamiento de
-			nuestras charlas informativas acerca del tema. Si tu hijo/a se encuentra en 3ro, 4to o 5to del liceo, ¡súmalo! Vamos a
-			tener juegos pensados para entretener, y a su vez concientizar e informar acerca de todo esto.</p>
+			
+			<p>Y como estos, muchos conflictos más nos regaló UPM con su llegada al país.</p>
+			
+			<p>Si estás interesado en los conflictos ambientales causados por esta empresa, participá de nuestras charlas informativas 
+			inscribiéndote a través de producimosfuturo@gmail.com. en dónde profundizamos la problemática de la forma más dinámica posible.</p>
+			
 			<p>¡Los esperamos!</p>
 		</div>
 		
