--- a/index.html
+++ b/index.html
@@ -44,12 +44,13 @@
 			<p>¡Los esperamos!</p>
 		</div>
 		 
-		<div id="INVITACI-N">
-			<img src="https://i.postimg.cc/8CY9jC8w/INVITACI-N.png" alt="">
-		</div>
 				
 		<div id=botonCharlas>
 			<button class=btn type="button" onclick="myFunction()">Acerca de nuestras charlas</button>
+		</div>
+		
+		<div id="Charlas" style="display:none">
+			<img src="https://i.postimg.cc/8CY9jC8w/INVITACI-N.png" alt="">
 		</div>
 
 		
